--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
+accelerate==0.33.0
 aiohappyeyeballs==2.3.4
-aiohttp==3.10.0
+aiohttp==3.10.1
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 async-timeout==4.0.3
-attrs==23.2.0
+attrs==24.1.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
-dataclasses-json==0.6.7
+diffusers==0.29.2
 distro==1.9.0
 exceptiongroup==1.2.2
 filelock==3.15.4
@@ -19,29 +20,29 @@ httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.24.5
 idna==3.7
+importlib_metadata==8.2.0
 Jinja2==3.1.4
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.2.12
-langchain-community==0.2.11
-langchain-core==0.2.27
+langchain-core==0.2.28
+langchain-huggingface==0.0.3
 langchain-openai==0.1.20
 langchain-text-splitters==0.2.2
-langsmith==0.1.96
+langsmith==0.1.98
 MarkupSafe==2.1.5
-marshmallow==3.21.3
 mpmath==1.3.0
 multidict==6.0.5
-mypy-extensions==1.0.0
 networkx==3.3
 numpy==1.26.4
-openai==1.37.2
+openai==1.39.0
 opencv-python==4.10.0.84
 orjson==3.10.6
 packaging==24.1
 pgvector==0.3.2
-Pillow==9.4.0
+pillow==10.4.0
+psutil==6.0.0
 psycopg2-binary==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
@@ -49,13 +50,13 @@ python-dotenv==1.0.1
 PyYAML==6.0.1
 regex==2024.7.24
 requests==2.32.3
-safetensors==0.4.3
+safetensors==0.4.4
 scikit-learn==1.5.1
 scipy==1.14.0
 segment_anything @ git+https://github.com/facebookresearch/segment-anything.git@6fdee8f2727f4506cfbbe553e23b895e27956588
 sentence-transformers==3.0.1
 sniffio==1.3.1
-SQLAlchemy==2.0.31
+SQLAlchemy==2.0.32
 sympy==1.13.1
 tenacity==8.5.0
 threadpoolctl==3.5.0
@@ -63,9 +64,9 @@ tiktoken==0.7.0
 tokenizers==0.19.1
 torch==2.2.2
 torchvision==0.17.2
-tqdm==4.66.4
-transformers==4.42.4
-typing-inspect==0.9.0
+tqdm==4.66.5
+transformers==4.43.4
 typing_extensions==4.12.2
 urllib3==2.2.2
 yarl==1.9.4
+zipp==3.19.2
